--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link
 	href="https://fonts.googleapis.com/css2?
 	family=Ubuntu+Mono&display=swap"
-	rel="stylesheet">	
+	rel="stylesheet">
+    <title>OnlineFoodShop</title>	
 </head>
 
 <body>
