--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="main">
 			<div class="inner">
 				<h1>About Me</h1>
-				<span class="image"><img src="image\me.jpg" alt="" /></span>
+				<span class="image"><img src="image\me.jpg" alt="me" style="width:100%"/></span>
 				<p>From Environmental Scientist to Software engineer intern located in Thailand. </p><br>
 				<p>Self learning, Teamwork, Communication. The kop, Cat person, Anime lover</p><br>
 				<p>Interested in Technology because it makes life easier.</p>
