--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div class="content">
 					<img src="image\water.jpg" alt="" style="width: 60%">
 					<h3>
-						<a href="#">Water Quality Prediction</a>
+						<a href="Water_quality.html" target="_black">Water Quality Prediction</a>
 					</h3>
 
 
