--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="content">
 					<img src="image\transfer.png" alt="" style="width:60%">
 					<h3>
-						<a href="#">Football Summer Transfer 2022</a>
+						<a href="Footbal_transfer2022.html" target="_blank">Football Summer Transfer 2022</a>
 					</h3>
 
 					<p>
@@ -60,7 +60,7 @@
 				<div class="content">
 					<img src="image\water.jpg" alt="" style="width: 60%">
 					<h3>
-						<a href="Water_quality.html" target="_black">Water Quality Prediction</a>
+						<a href="Water_quality.html" target="_blank">Water Quality Prediction</a>
 					</h3>
 
 
