--- a/index.html
+++ b/index.html
@@ -14,116 +14,142 @@
 
 <body>
 
-	<!-- title and tag -->
-	<div class="container">
-		<h1>Kitpivat Piromgit</h1>
-		<h3>Fullstack Sofeware Engineer</h3>
-		<hr>
+	<!--Header  -->
+	<header>
+		<!-- Logo -->
+		<a class="logo--container" href="#hero">
+			<div class="logo__image--container">
+				<img src="image\CdWHOTHUYAEp0MD-removebg-preview.png" />
+			</div>
+		</a>
+		<!--Navaigation-->
+		<nav>
+			<ul>
+				<li><a href="#main"><i class="row">Home</a></i></li>
+				<li><a href="#port"><i class="row">Portfolio</a></i></li>
+				<li><a href="#footer"><i class="row">Contact</a></i></li>
+			</ul>
+		</nav>
+	</header>
 
-		<!-- Main -->
-		<div id="main">
-			<div class="inner">
-				<h2>About Me</h2>
-				<span class="image"><img src="image\me.jpg" alt="me" style="width:60%"/></span>
-				<p>From Environmental Scientist to Software engineer intern located in Thailand. </p><br>
-				<p>Self learning, Teamwork, Communication. The kop, Cat person, Anime lover</p><br>
-				<p>Interested in Technology because it makes life easier.</p>
+	<!--Section-->
+	<section class="abme" id="abme">
+		<!--Header-->
+		<div class="abme-name">
+			<div class="abme-text">
+				<h1>About Me</h1>
+				<h2>Kitpivat Piromgit</h2>
+				<h2>Fullstack Sofeware Engineer</h2>
+				<p>From Environmental Scientist to Software engineer intern located in Thailand.
+					Self learning, Teamwork, Communication. The kop, Cat person, Anime lover
+					Interested in Technology because it makes life easier.
+				</p>
 			</div>
 		</div>
 
-		<!-- Content of the body-->
-		<h2>Portfolio</h2>
-		<div class="row">
-			<div class="column">
-				<div class="content">
-					<img src="image\transfer.png" alt="" style="width:60%">
-					<h3>
-						<a href="Footbal_transfer2022.html" target="_blank">Football Summer Transfer 2022</a>
-					</h3>
-
-					<p>
-						HTML stands for Hyper Text Markup
-						Language. It is used to design web
-						pages using markup language. HTML
-						is the combination of Hypertext and
-						Markup language. Hypertext defines
-						the link between the web pages.
-					</p>
-
-
-
-
-				</div>
+		<!-- Image -->
+		<div class="imgja">
+			<div class="imgja-con">
+				<img src="image\me.jpg" class="image" alt="me">
 			</div>
+		</div>
+	</section>
 
-			<div class="column">
-				<div class="content">
-					<img src="image\water.jpg" alt="" style="width: 60%">
-					<h3>
-						<a href="Water_quality.html" target="_blank">Water Quality Prediction</a>
-					</h3>
+	<!-- Content of the body-->
+	<section class = "port">
+	<h2>Portfolio</h2>
+	</section>
+	<div id="port">
+		<div class="column">
+			<div class="content">
+				<img src="image\transfer.png" alt="Football">
+				<h3>
+					<a href="Footbal_transfer2022.html" target="_blank">Football Summer Transfer 2022</a>
+				</h3>
+
+				<p>
+					HTML stands for Hyper Text Markup
+					Language. It is used to design web
+					pages using markup language. HTML
+					is the combination of Hypertext and
+					Markup language. Hypertext defines
+					the link between the web pages.
+				</p>
 
 
-					<p>
-						Cascading Style Sheets, fondly referred
-						to as CSS, is a simply designed language
-						intended to simplify the process of
-						making web pages presentable. CSS allows
-						you to apply styles to web pages.
-					</p>
 
 
-
-
-				</div>
 			</div>
+		</div>
 
-			<div class="column">
-				<div class="content">
-					<img src="image\book.png" alt="" style="width:60%">
-					<h3>
-						<a href="#">Book Recommendation</a>
-					</h3>
-
-
-					<p>
-						The term PHP is an acronym for PHP:
-						Hypertext Preprocessor. PHP is a
-						server-side scripting language
-						designed specifically for web
-						development. PHP can be easily
-						embedded in HTML files.
-					</p>
+		<div class="column">
+			<div class="content">
+				<img src="image\water.jpg" alt="water quality">
+				<h3>
+					<a href="Water_quality.html" target="_blank">Water Quality Prediction</a>
+				</h3>
 
 
+				<p>
+					Cascading Style Sheets, fondly referred
+					to as CSS, is a simply designed language
+					intended to simplify the process of
+					making web pages presentable. CSS allows
+					you to apply styles to web pages.
+				</p>
 
 
-				</div>
+
+
 			</div>
+		</div>
 
-			<div class="column">
-				<div class="content">
-					<img src="image\pizza.jpg" alt="" style="width:60%">
-					<h3>
-						<a href="#">Pizza Restaurant</a>
-					</h3>
+		<div class="column">
+			<div class="content">
+				<img src="image\book.png" alt="audio book">
+				<h3>
+					<a href="#">Book Recommendation</a>
+				</h3>
 
 
-					<p>
-						Javascript was developed by Brendan
-						Eich in 1995. At first, it was called
-						LiveScript but was later name to
-						JavaScript. JavaScript is the muscle
-						of the structure
-					</p>
+				<p>
+					The term PHP is an acronym for PHP:
+					Hypertext Preprocessor. PHP is a
+					server-side scripting language
+					designed specifically for web
+					development. PHP can be easily
+					embedded in HTML files.
+				</p>
 
-				</div>
+
+
+
+			</div>
+		</div>
+
+		<div class="column">
+			<div class="content">
+				<img src="image\pizza.jpg" alt="Pizza">
+				<h3>
+					<a href="#">Pizza Restaurant</a>
+				</h3>
+
+
+				<p>
+					Javascript was developed by Brendan
+					Eich in 1995. At first, it was called
+					LiveScript but was later name to
+					JavaScript. JavaScript is the muscle
+					of the structure
+				</p>
+
 			</div>
 		</div>
 	</div>
+	</div>
 	<div>
 
-		
+
 		<footer id="footer">
 			<li><a href="https://github.com/shirocola"><i class="fa-brands fa-square-github fa-10x"></a></i>
 			<li><a href="mailto:Kitpivatpiromgit@gmail.com"><i class="fa-solid fa-envelope fa-10x"></a></i>
